ui/src/containers/dumb/User/UserChatPage.css
body {
    margin: 0;
    padding: 0;
    font-family: Roboto;
    height: 100%;
}

html, #root, [data-reactroot], #whole-page {
    height: 100%;
}

#content{
    height: 100%;
    padding-top: 60px;
}

#horizontal_nav {
    position: absolute;
    top: 0;
    width: 100%;
    height: 43px;
}

#messenger-left-column {
    float: left;
    width:25%;
    height: 100%;
    border-right: solid rgb(117,120,123);
    position: relative;
}

#user-message-window{
    position: relative;
    float:right;
    width: 75%;
    height: 100%;
    background-color: white;
}

/*.button {*/
    /*background-color: #86BC25;*/
    /*border-radius: 3px;*/
    /*color: #fff;*/
    /*display: inline-block;*/
    /*margin-bottom: 5px;*/
    /*padding: 5px 15px;*/
    /*text-decoration: none;*/
    /*margin: 10px;*/
/*}*/

